2020-06-09 Bastian Bechtold, cage
	* annotate.el (annotate-buffers-annotate-mode, annotate-switch-db)
	- added functions to switch the database of annotations used for the emacs session;
	- increased version to 0.8.0

2020-05-18 Bastian Bechtold, cage
	* annotate.el
	- Increased version to 0.7.0 for stable release

2020-01-25 Bastian Bechtold, cage

        * annotate.el (annotate-annotation-force-newline-policy,
                       annotate-annotation-newline-policy-forced-p,
                       annotate-create-annotation,
                       annotate-lineate,
                       annotate-summary-delete-annotation-button-pressed):
        - mitigated bug that prevented rendering of annotation in
          org-mode forcing 'newline' policy for annotation
          positioning.
          See the local function
          'maybe-force-newline-policy' in 'annotate-create-annotation'.
        - chosen the window that contains the current buffer when resizing the annotations
          see variable 'current-window' in 'annotate-lineate';
        - redraw buffer if one of its annotations is deleted
          operating from the summary window.
          see: 'annotate-summary-delete-annotation-button-pressed'.

2020-01-22 Bastian Bechtold, cage

        * annotate.el (annotate--font-lock-matcher):
        - fixed error for regexp search
        Sometimes some modes/package puts overlay on the last character of a
        buffer (notably SLIME when the parenthesis of a form are not
        balanced). This will make 're-search-forward' in the aforementioned
        function fails and font lock becomes a mess (e.g. text color
        disappears).

2020-02-10 Bastian Bechtold, cage
        * annotate.el (annotate--font-lock-matcher annotate-bounds annotate-symbol-strictly-at-point annotate-next-annotation-change annotate-previous-annotation-change annotate-clear-annotations annotate-annotate)
        - prevented fails of fontification of annotated regions